# spela

./: CLAUDE.md  Cargo.toml  Cross.toml  DECISIONS.md  LICENSE  OPERATIONS.md  PHONE_APP_PROJECT.md  README.md  TODO.md  config.toml.example  spela.service
.claude/specs/custom-cast-receiver/: design.md  requirements.md  tasks.md
.claude/specs/web-remote/: design.md  requirements.md  tasks.md
docs/: CAST_DEBUGGING_RECIPES.md  INCIDENT_REPORT_WILDERPEOPLE_2026_05_01.md  LOCAL_LIBRARY_STREAMING_PLAN.md  barrage_findings_2026_07_05.md  cc_session_audit_2026_04_29.md  librqbit_streaming_faststart_research_2026_07_05.md  rt_score_fetch_research_2026-07-13.md  session_2026_04_29_30_librqbit_migration_and_security_audit.md  slow_torrent_strategies_research_2026_07_05.md  subtitle_sync_research_2026_07_04.md  ux_principles_media_remote_2026_07_04.md  watch_tracker_roadmap.md
src/: cast.rs  config.rs  disk.rs  hls_cache.rs  library_origin.rs  main.rs  search.rs  server.rs  state.rs  subtitles.rs  torrent.rs  torrent_engine.rs  torrent_stream.rs  transcode.rs
static/: cast-receiver.html  remote.html
systemd/: spela-resource-limits.conf
v1-archive/: cast.py  cli.js  package.json  server.js
