[package]
name = "spela"
version = "3.3.0"
edition = "2021"
description = "AI-agent-ready media controller — search, stream, cast"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
rust_cast = "0.21"
mdns-sd = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

# Apr 29, 2026: pure-Rust BitTorrent client to replace webtorrent-cli (Node).
# Migration plan: see `~/Projects/spela/CLAUDE.md` § "webtorrent-cli weak peer
# discovery" hard-won lesson. Pin 8.1.x — 9.0-beta has macOS build issues
# (rqbit issue #578) and edition-2024 Rust requirement. The streaming API
# (`ManagedTorrent::stream` -> `FileStream: AsyncRead + AsyncSeek`) is stable
# across 8.1 -> 9.0-beta.2, so the eventual upgrade is non-breaking.
librqbit = { version = "8.1", default-features = false, features = ["rust-tls"] }

# Apr 30, 2026: rustls 0.23+ requires an explicit `CryptoProvider::install_default()`
# call before any TLS use when multiple provider crates can coexist transitively.
# librqbit's `rust-tls` feature pulls in rustls via reqwest/rustls-tls without
# pinning a provider. Without this dep + an early `install_default()` call in
# main.rs, librqbit's tracker / UPnP HTTPS path panics with:
#   "Could not automatically determine the process-level CryptoProvider from
#    Rustls crate features."
# The panic poisons whatever mutex the panicking task was holding, cascading
# into PoisonError on every subsequent `.lock().unwrap()`.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

[dev-dependencies]
# mtime manipulation for disk-prune regression tests (Apr 15, 2026)
filetime = "0.2"
tempfile = "3.27.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
